--- a/news-portal/vercel.json
+++ b/news-portal/vercel.json
@@ -2,7 +2,15 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/"
+      
+    "rewrites": [
+        {
+        "source": "/(.*)",
+        "destination": "/index.html"
+        }
+    ]
     }
+
+    
   ]
 }
